samples/_failures_safe/1761424558_058a84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93b7d1b0.c: In function ‘main’:
./samples/SAFE/__tmp_93b7d1b0.c:155:21: error: ‘mult’ undeclared (first use in this function)
  155 |                 if (mult
      |                     ^~~~
./samples/SAFE/__tmp_93b7d1b0.c:155:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_93b7d1b0.c:155:25: error: expected ‘)’ at end of input
  155 |                 if (mult
      |                    ~    ^
      |                         )
./samples/SAFE/__tmp_93b7d1b0.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (mult
      |                 ^~
./samples/SAFE/__tmp_93b7d1b0.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93b7d1b0.c:155:17: error: expected declaration or statement at end of input
